fix(index): correct alignment on small devices for demo description

--- a/src/components/Jumbotron/styles.module.css
+++ b/src/components/Jumbotron/styles.module.css
@@ -38,6 +38,7 @@
 .jumbotron__description {
   color: var(--palette-pink);
   font-size: var(--font-size-large);
+  text-align: center;
 }
 
 .jumbotron__right {
